welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: type mismatch;
 found   : Int(7)
 required: String
			return 7;00;
                               ^alarmClock:4: error: type mismatch;
 found   : Int(0)
 required: String
			return 7;00;
                                 ^alarmClock:6: error: type mismatch;
 found   : Int(10)
 required: String
			return 10;00;
                               ^alarmClock:6: error: type mismatch;
 found   : Int(0)
 required: String
			return 10;00;
                                  ^alarmClock:10: error: type mismatch;
 found   : Int(10)
 required: String
			return 10;00;
                               ^alarmClock:10: error: type mismatch;
 found   : Int(0)
 required: String
			return 10;00;
                                  ^alarmClock:12: error: not found: value off
			return off;
                               ^